fix color contrast

--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -845,14 +845,14 @@ footer.copy-right {
 }
 #casi {
   background-color: #383b47;
-  box-shadow: 0 12px 24px #00000033, 0 3px 6px #00000033, 0 2px 1px -1px rgba(255, 255, 255, 0.3) inset, 0 -2px 1px -1px #00000033 inset;
+  box-shadow: 0 12px 24px #00000033, 0 3px 6px #00000033, 0 2px 1px -1px #ffffff4d inset, 0 -2px 1px -1px #00000033 inset;
   padding: 1rem;
   border-radius: 9px;
   width: fit-content;
 }
 
 .casi__title {
-  color: #9898a4;
+  color: #bbbbc3;
   font-weight: 500;
   margin-bottom: 0.75rem;
 }
@@ -861,14 +861,14 @@ footer.copy-right {
   animation: turn-on 1s 1 ease-out;
   background-color: #b2ac7a;
   border-radius: 3px;
-  box-shadow: 0 2px 2px 1px #00000033 inset, 0 0 2px 1px #00000033 inset, 0 -1px 1px #00000033, 0 -1px 2px #00000033, 0 1px 1px rgba(255, 255, 255, 0.3), 0 1px 2px rgba(255, 255, 255, 0.3);
+  box-shadow: 0 2px 2px 1px #00000033 inset, 0 0 2px 1px #00000033 inset, 0 -1px 1px #00000033, 0 -1px 2px #00000033, 0 1px 1px #ffffff4d, 0 1px 2px #ffffff4d;
   color: #272415;
   display: grid;
   justify-items: right;
   gap: 0.2rem;
   margin-bottom: 1rem;
   padding: 0.5rem 0.5rem 0.25rem;
-  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.3);
+  text-shadow: 0 1px 1px #0000004d;
 }
 .casi__display > p {
   margin-bottom: 0;
@@ -896,7 +896,7 @@ footer.copy-right {
 .casi__btn {
   background-color: #787887;
   box-shadow: 0 2px 3px #00000033, 0 2px 2px #00000033;
-  border: 1px solid rgba(255, 255, 255, 0.08);
+  border: 1px solid #ffffff14;
   border-radius: 3px;
   cursor: pointer;
   display: grid;
